Styled Cart and Navbar in all the webpages

--- a/products.html
+++ b/products.html
@@ -16,7 +16,7 @@
             <a href="home.html">Home</a>
             <a href="cart.html">Cart</a>
             <input class="search-bar" type="text" id="searchInput" placeholder="Search...">
-            <button id="searchButton">Search</button>
+            <button id="searchButton" class="search-button">Search</button>
         </div>
     </div>
     <h1 class="title">Products</h1>
