--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
             <a href="products.html">Products</a>
             <a href="cart.html">Cart</a>
             <input class="search-bar" type="text" id="searchInput" placeholder="Search...">
-            <button id="searchButton">Search</button>
+            <button id="searchButton" class="search-button">Search</button>
         </div>
     </div>
     <h1 class="title">eDeliverX Online Store</h1>
