Added devices info

--- a/products.html
+++ b/products.html
@@ -139,31 +139,31 @@
         // You can implement your logic here, e.g., show product details
         switch(productName){
             case 'Acer':
-                alert("This is Acer")
+                alert("Processor: Intel Core, RAM: 8GB, Storage: SSDs and HDDs.")
                 break
             case 'Samsung':
-                alert("This is Samsung")
+                alert("Processor: Intel Core i7, RAM: 16GB, Storage: 512GB SSDs.")
                 break
             case 'Macbook':
-                alert("This is Macbook")
+                alert("Processor: M1 chip, RAM: 16GB, Storage: 256GB SSDs.")
                 break
             case 'Samsung':
-                alert("This is Samsung")
+                alert("Display: LED or QLED, Connectivity: HDMI, Blu-ray players, USB ports, Resolution: 4K Ultra HD (3840 x 2160 pixels).")
                 break
             case 'LG':
-                alert("This is LG")
+                alert("Display: LED or OLED, Connectivity: HDMI, Blu-ray players, USB ports, Resolution:  Full HD (1920 x 1080 pixels).")
                 break
             case 'Sony':
-                alert("This is Sony")
+                alert("TDisplay: LED or OLED, Connectivity: HDMI, Blu-ray players, USB ports, Resolution: 4K Ultra HD (3840 x 2160 pixels).")
                 break
             case 'Galaxy':
-                alert("This is Galaxy")
+                alert("Display: Size of around 6.5 to 6.6 inches, RAM and Storage: 4GB, 64GB, Connectivity: 4G LTE, Wi-Fi, Bluetooth, and GPS.")
                 break
             case 'Huawei':
-                alert("This is Huawei")
+                alert("Display: OLED display with a size of 6.76 inches, RAM and Storage: 12GB, 256GB, Connectivity: 4G LTE, Wi-Fi, Bluetooth, and GPS, NFC for contactless payments and has a USB Type-C port for charging and data transfer.")
                 break
             case 'Iphone 13':
-                alert("This is Iphone")
+                alert("Display: Super Retina XDR display with a size of 6.7 inches, Storage: 512GB, Connectivity: 5G, Wi-Fi 6, Bluetooth, NFC, GPS, Lightning connector.")
                 break
             default:
                 alert("This product has no details")
