--- a/cart.html
+++ b/cart.html
@@ -85,10 +85,15 @@
                 }
 
                 function deleteItem(index) {
-                    cartItems.splice(index, 1);
+                    const item = cartItems[index];
+                    if (item.quantity > 1) {
+                        item.quantity--;
+                    } else {
+                        cartItems.splice(index, 1);
+                    }
                     localStorage.setItem('cartItems', JSON.stringify(cartItems));
                     renderCartItems();
-                }
+                    }
             </script>
         </div>
 
