Linked pages together

--- a/products.html
+++ b/products.html
@@ -17,6 +17,7 @@
             <a href="cart.html">Cart</a>
             <input class="search-bar" type="text" id="searchInput" placeholder="Search...">
             <button id="searchButton" class="search-button">Search</button>
+            <a href="account.html">Sign in</a>
         </div>
     </div>
     <h1 class="title">Products</h1>
