--- a/cart.html
+++ b/cart.html
@@ -14,6 +14,7 @@
         <div class="navbar-right">
             <a href="home.html">Home</a>
             <a href="products.html">Products</a>
+            <a href="account.html">Sign in</a>
         </div>
     </div>
 
