--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
             <a href="cart.html">Cart</a>
             <input class="search-bar" type="text" id="searchInput" placeholder="Search...">
             <button id="searchButton" class="search-button">Search</button>
+            <a href="account.html">Sign in</a>
         </div>
     </div>
     <h1 class="title">eDeliverX Online Store</h1>
