--- a/cart.html
+++ b/cart.html
@@ -28,6 +28,7 @@
                 <div id="orderTotal"></div>
             </div>
             
+            
             <script>
                 let cartItems = JSON.parse(localStorage.getItem('cartItems')) || [];
 
@@ -94,7 +95,7 @@
                     }
                     localStorage.setItem('cartItems', JSON.stringify(cartItems));
                     renderCartItems();
-                    }
+                }
             </script>
         </div>
 
@@ -107,18 +108,16 @@
         </div>
     </div>
 
-    <script>
-        function processPayment() {
-            const cardNumber = document.getElementById('cardNumber').value;
-            const expiryDate = document.getElementById('expiryDate').value;
-            const cvv = document.getElementById('cvv').value;
-
-            // Implement your payment processing logic here
-            // You can send the payment details to a server for processing
-
-            // For demo purposes, we'll just display an alert
-            alert('Payment processed successfully!');
-        }
-    </script>
-</body>
-</html>
+    <footer class="footer">
+        <div class="contact-info">
+            <h2>Contact Us</h2>
+            <p><strong>Email:</strong> info@edeliverx.com</p>
+            <p><strong>Phone:</strong> +1 123-456-7890</p>
+            <p><a href="contact.html">Go to Contact Us page</a></p>
+        </div>
+        <div class="social-media-icons">
+            <a href="#"><img src="images/insta.png" alt="Instagram" style="width: 30px; height: 30px;"></a>
+            <a href="#"><img src="images/face.png" alt="Facebook" style="width: 30px; height: 30px;"></a>
+            <a href="#"><img src="images/twit.png" alt="Twitter" style="width: 30px; height: 30px;"></a>
+        </div>
+    </footer>
