--- a/home.html
+++ b/home.html
@@ -16,14 +16,14 @@
             <a href="cart.html">Cart</a>
             <input class="search-bar" type="text" id="searchInput" placeholder="Search...">
             <button id="searchButton" class="search-button">Search</button>
-            <a href="account.html">Sign in</a>
+            <a href="account.html">Sign up</a>
         </div>
     </div>
     <h1 class="title">eDeliverX Online Store</h1>
 
     <div class="image-container">
         <img class="image1" src="images/p1.jpg" alt="My Image">
-        <img class ="image2" src="images/p2.jpg" alt="My Image">
+        <img class="image2" src="images/p2.jpg" alt="My Image">
     </div>
 
     <div class="about-us">
@@ -37,6 +37,21 @@
             <p>Join us at eDeliverX and unlock the full potential of your electronic retail business online. Let's create an exceptional shopping experience and drive your business growth together.</p>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="contact-info">
+            <h2>Contact Us</h2>
+            <p><strong>Email:</strong> info@edeliverx.com</p>
+            <p><strong>Phone:</strong> +1 123-456-7890</p>
+            <p><a href="contact.html">Go to Contact Us page</a></p>
+        </div>
+        <div class="social-media-icons">
+            <a href="#"><img src="images/insta.png" alt="Instagram" style="width: 30px; height: 30px;"></a>
+            <a href="#"><img src="images/face.png" alt="Facebook" style="width: 30px; height: 30px;"></a>
+            <a href="#"><img src="images/twit.png" alt="Twitter" style="width: 30px; height: 30px;"></a>
+        </div>
+    </footer>
+
     <script>
         const searchInput = document.getElementById('searchInput');
         const searchButton = document.getElementById('searchButton');
