--- a/products.html
+++ b/products.html
@@ -115,6 +115,19 @@
     </li>
 </ul>
 
+<footer class="footer">
+    <div class="contact-info">
+        <h2>Contact Us</h2>
+        <p><strong>Email:</strong> info@edeliverx.com</p>
+        <p><strong>Phone:</strong> +1 123-456-7890</p>
+        <p><a href="contact.html">Go to Contact Us page</a></p>
+    </div>
+    <div class="social-media-icons">
+        <a href="#"><img src="images/insta.png" alt="Instagram" style="width: 30px; height: 30px;"></a>
+        <a href="#"><img src="images/face.png" alt="Facebook" style="width: 30px; height: 30px;"></a>
+        <a href="#"><img src="images/twit.png" alt="Twitter" style="width: 30px; height: 30px;"></a>
+    </div>
+</footer>
 
 <script>
     
