--- a/sign_in.html
+++ b/sign_in.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="css/account.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Sign In</title>
 </head>
 <body>
     <div class="navbar">
@@ -19,8 +19,8 @@
     </div>
 
     <div class="container">
-        <h2>Sign Up</h2>
-        <form id="sign-up-form">
+        <h2>Sign In</h2>
+        <form id="sign-in-form">
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="name" id="name" name="name" required>
@@ -34,10 +34,10 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <div class="form-group">
-                <input type="submit" value="Sign Up">
+                <input type="submit" value="Sign In">
             </div>
             <div class="form-group">
-                <a href="sign_in.html">Do you already have an Account? Sign In!</a>
+                <a href="forgot-password.html">Did you forget your password? Reset It!</a>
             </div>
             <div id="message-container"></div>
         </form>
@@ -58,7 +58,7 @@
     </footer>
 
     <script>
-    var form = document.getElementById('sign-up-form');
+    var form = document.getElementById('sign-in-form');
     var messageContainer = document.getElementById('message-container');
 
     form.addEventListener('submit', function(event) {
@@ -67,7 +67,7 @@
         var email = document.getElementById('email').value;
         var password = document.getElementById('password').value;
 
-        messageContainer.innerHTML = '<p>You have successfully signed up.</p>';
+        messageContainer.innerHTML = '<p>You have successfully Signed In.</p>';
         // Reset the form
         form.reset();
     });
